fix: now delete methods take args as query params instead of bodies
