# src/docs/swagger.json
@@ -773,6 +773,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Teacher ID",
+                        "name": "teacherId",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -961,13 +968,11 @@
                         "required": true
                     },
                     {
-                        "description": "Unset favourite course request",
-                        "name": "unsetFavouriteCourseRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schemas.UnsetFavouriteCourseRequest"
-                        }
+                        "type": "string",
+                        "description": "Student ID",
+                        "name": "studentId",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1208,13 +1213,11 @@
                         "required": true
                     },
                     {
-                        "description": "Unenrollment request",
-                        "name": "unenrollmentRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schemas.UnenrollStudentRequest"
-                        }
+                        "type": "string",
+                        "description": "Student ID",
+                        "name": "studentId",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -3259,32 +3262,10 @@
                 }
             }
         },
-        "schemas.UnenrollStudentRequest": {
-            "type": "object",
-            "required": [
-                "student_id"
-            ],
-            "properties": {
-                "student_id": {
-                    "type": "string"
-                }
-            }
-        },
         "schemas.UnenrollStudentResponse": {
             "type": "object",
             "properties": {
                 "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "schemas.UnsetFavouriteCourseRequest": {
-            "type": "object",
-            "required": [
-                "student_id"
-            ],
-            "properties": {
-                "student_id": {
                     "type": "string"
                 }
             }
@@ -3348,6 +3329,9 @@
         },
         "schemas.UpdateCourseRequest": {
             "type": "object",
+            "required": [
+                "teacher_id"
+            ],
             "properties": {
                 "capacity": {
                     "type": "integer"
