# src/schemas/enrollment.go
@@ -8,10 +8,6 @@ type EnrollStudentResponse struct {
 	Message string `json:"message"`
 }
 
-type UnenrollStudentRequest struct {
-	StudentID string `json:"student_id" binding:"required"`
-}
-
 type UnenrollStudentResponse struct {
 	Message string `json:"message"`
 }
@@ -22,10 +18,6 @@ type SetFavouriteCourseRequest struct {
 
 type SetFavouriteCourseResponse struct {
 	Message string `json:"message"`
-}
-
-type UnsetFavouriteCourseRequest struct {
-	StudentID string `json:"student_id" binding:"required"`
 }
 
 type UnsetFavouriteCourseResponse struct {
